--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -4,8 +4,7 @@ branches:
     
 install:
   - set QTDIR=C:\Qt\5.10.1\mingw53_32
-  - choco install -y InnoSetup
-  - set PATH=%QTDIR%\bin;C:\Qt\Tools\mingw530_32\bin;%PATH%;"C:\Program Files (x86)\Inno Setup 5"
+  - set PATH=%QTDIR%\bin;C:\Qt\Tools\mingw530_32\bin;%PATH%;
   
 build_script:
   - cd ./src
